--- a/layout/common/head.ejs
+++ b/layout/common/head.ejs
@@ -29,6 +29,10 @@
 <link rel="icon" href="<%- url_for(get_config('favicon')) %>">
 <% } %>
 
+<% if (has_config('visit')) { %>
+    <script async="" src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<% } %>
+
 <%- _css(cdn('bulma', '0.7.2', 'css/bulma.css')) %>
 <%- _css(iconcdn()) %>
 <%- _css(fontcdn('Ubuntu:400,600|Source+Code+Pro')) %>
